--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "truffle test"
+    "test": "truffle test test/Library.js"
+    "start": "truffle develop"
   },
   "keywords": [],
   "author": "",
