--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "truffle test test/Library.js"
+    "test": "truffle test test/Library.js",
     "start": "truffle develop"
   },
   "keywords": [],
